--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -258,19 +258,22 @@ gtkbuilder_DATA =	 					\
 			online-services-request-popup.ui	\
 			preferences.ui				\
 			update-viewer.ui			\
-			user-profile-viewer.ui
+			user-profile-viewer.ui			\
+
 
 sexy_DATA =							\
-			main-window.ui				\
-			timelines-sexy-tree-view.ui		\
+			following-viewer.ui			\
 			friends-manager.ui			\
-			following-viewer.ui
+			main-window.ui				\
+			uberchick-tree-view.ui			\
+
 
 un_sexy_DATA =							\
-			main-window.in.ui			\
-			timelines-sexy-tree-view.in.ui		\
+			following-viewer.in.ui			\
 			friends-manager.in.ui			\
-			following-viewer.in.ui
+			main-window.in.ui			\
+			uberchick-tree-view.in.ui		\
+
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = @PACKAGE_NAME@.svg
@@ -351,10 +354,10 @@ uninstall-desktopDATA:
 	done
 
 
-main-window.ui: sexy_DATA
-timelines-sexy-tree-view.ui: sexy_DATA
-friends-manager.ui: sexy_DATA
 following-viewer.ui: sexy_DATA
+friends-manager.ui: sexy_DATA
+main-window.ui: sexy_DATA
+uberchick-tree-view.ui: sexy_DATA
 sexy_DATA: $(un_sexy_DATA)
 	@list='$(un_sexy_DATA)'; for p in $$list; do \
 		if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
