--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -41,8 +41,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/tweets/home_timeline</key>
-			<applyto>/apps/@PACKAGE_NAME@/tweets/home_timeline</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/updates/home_timeline</key>
+			<applyto>/apps/@PACKAGE_NAME@/updates/home_timeline</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>string</type>
 			<default>/statuses/friends_timeline.xml</default>
@@ -53,8 +53,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/tweets/reload_timeline</key>
-			<applyto>/apps/@PACKAGE_NAME@/tweets/reload_timeline</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/updates/reload_timeline</key>
+			<applyto>/apps/@PACKAGE_NAME@/updates/reload_timeline</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>5</default>
@@ -121,8 +121,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/ui/timelines_sexy_tree_view/scroll_to_top_with_new_updates</key>
-			<applyto>/apps/@PACKAGE_NAME@/ui/timelines_sexy_tree_view/scroll_to_top_with_new_updates</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/uberchick_tree_view/scroll_to_top_with_new_updates</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/uberchick_tree_view/scroll_to_top_with_new_updates</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -135,8 +135,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/ui/timelines_sexy_tree_view/select_update_by_default</key>
-			<applyto>/apps/@PACKAGE_NAME@/ui/timelines_sexy_tree_view/select_update_by_default</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/uberchick_tree_view/select_update_by_default</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/uberchick_tree_view/select_update_by_default</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -288,8 +288,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/search_history/unique_only</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/search_history/unique_only</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/search/history/unique_only</key>
+			<applyto>/apps/@PACKAGE_NAME@/search/history/unique_only</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -303,8 +303,22 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/search_history/maximum</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/search_history/maximum</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/search/history/saved/0</key>
+			<applyto>/apps/@PACKAGE_NAME@/search/history/saved/0</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>string</type>
+			<default>#@PACKAGE_NAME@</default>
+			<locale name="C">
+				<short>@PACKAGE_NAME@'s saved searches.</short>
+				<long>
+					@PACKAGE_NAME@'s saved searches.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/search/history/maximum</key>
+			<applyto>/apps/@PACKAGE_NAME@/search/history/maximum</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>25</default>
@@ -317,8 +331,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/previous_updates/unique_only</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/previous_updates/unique_only</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/updates/history/unique_only</key>
+			<applyto>/apps/@PACKAGE_NAME@/updates/history/unique_only</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -332,8 +346,22 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/previous_updates/maximum</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/previous_updates/maximum</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/updates/history/saved/0</key>
+			<applyto>/apps/@PACKAGE_NAME@/updates/history/saved/0</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>string</type>
+			<default>->->I'm posting my first update from @PACKAGE_NAME@</default>
+			<locale name="C">
+				<short>@PACKAGE_NAME@'s saved updates.</short>
+				<long>
+					@PACKAGE_NAME@'s saved updates.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/previous_updates/maximum</key>
+			<applyto>/apps/@PACKAGE_NAME@/previous_updates/maximum</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>50</default>
@@ -491,7 +519,7 @@
 			<applyto>/apps/@PACKAGE_NAME@/alerts/disable_system_bell</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
-			<default>true</default>
+			<default>false</default>
 			<locale name="C">
 				<short>Disables all sound notifications</short>
 				<long>Disables all sound notifications.</long>
@@ -515,7 +543,7 @@
 			<applyto>/apps/@PACKAGE_NAME@/alerts/disable_update_length_alert</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
-			<default>true</default>
+			<default>false</default>
 			<locale name="C">
 				<short>Sound notification of long messages</short>
 				<long>Sound notification of long messages.</long>
@@ -675,8 +703,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/ui/timelines_sexy_tree_view/position_hpaned</key>
-			<applyto>/apps/@PACKAGE_NAME@/ui/timelines_sexy_tree_view/position_hpaned</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/uberchick_tree_view/position_hpaned</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/uberchick_tree_view/position_hpaned</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>320</default>
