--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -41,8 +41,24 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/home_timeline</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/home_timeline</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/popup_confirmation_dialog/disabled_when/clearing/update_viewer</key>
+			<applyto>/apps/@PACKAGE_NAME@/popup_confirmation_dialog/disabled_when/clearing/update_viewer</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Disable prompting before removing all text from the update viewer's update entry</short>
+				<long>
+					Disable prompting before removing all text from the update viewer's update entry.
+					Clean-up occures when a best friend's profile can no longer
+					be found on its associated service.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/start-up/tabs/additional_timeline</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/start-up/tabs/additional_timeline</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>string</type>
 			<default>/statuses/friends_timeline.xml</default>
@@ -53,8 +69,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/reload_timeline</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/reload_timeline</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/tabs/reload</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/tabs/reload</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>5</default>
@@ -350,7 +366,7 @@
 			<applyto>/apps/@PACKAGE_NAME@/updates/history/saved/0</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>string</type>
-			<default>->->I'm posting my first update from @PACKAGE_NAME@</default>
+			<default>I'm posting my first update from @PACKAGE_NAME@</default>
 			<locale name="C">
 				<short>@PACKAGE_NAME@'s saved updates.</short>
 				<long>
@@ -374,26 +390,25 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/direct_reply_only</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/direct_reply_only</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/updates/reply/directly_to</key>
+			<applyto>/apps/@PACKAGE_NAME@/updates/reply/directly_to</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
-			<default>true</default>
+			<default>false</default>
 			<locale name="C">
 				<short>How to handle replying to a tweet.</short>
 				<long>
 					Rather to post @ replies to all accounts or just the account/service the user belongs to.
-					This implies 'no_link_in_replies'.
 				</long>
 			</locale>
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/updates/no_link_in_replies</key>
-			<applyto>/apps/@PACKAGE_NAME@/updates/no_link_in_replies</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/updates/reply/add_profile_link</key>
+			<applyto>/apps/@PACKAGE_NAME@/updates/reply/add_profile_link</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
-			<default>true</default>
+			<default>false</default>
 			<locale name="C">
 				<short>How to format replying to a tweet.</short>
 				<long>
@@ -404,8 +419,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/update_viewer/url_expansion/disabled</key>
-			<applyto>/apps/@PACKAGE_NAME@/update_viewer/url_expansion/disabled</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/disabled</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/disabled</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -419,8 +434,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/update_viewer/url_expansion/selected_only</key>
-			<applyto>/apps/@PACKAGE_NAME@/update_viewer/url_expansion/selected_only</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/selected_only</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/selected_only</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -431,8 +446,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/update_viewer/url_expansion/user_profiles</key>
-			<applyto>/apps/@PACKAGE_NAME@/update_viewer/url_expansion/user_profiles</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/user_profiles</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/user_profiles</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -443,8 +458,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/update_viewer/url_expansion/replace_with_titles</key>
-			<applyto>/apps/@PACKAGE_NAME@/update_viewer/url_expansion/replace_with_titles</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/replace_with_titles</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/update_viewer/uri_expansion/replace_with_titles</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -625,7 +640,7 @@
 			<locale name="C">
 				<short>Confirm deletion of best friend when their profile isn't found</short>
 				<long>
-					@PACKAGE_NAME@ can 'reload/refrese' a users best friends.
+					@PACKAGE_NAME@ can 'reload/refresh' a users best friends.
 					If a best friend's profile isn't found @PACKAGE_NAME@ will
 					remove the best friend from the user's best friends list.
 					Because user profile's cannot be found when, either,
