--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,44 +47,45 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 @HAVE_GNOME_KEYRING_TRUE@keyring_sources = keyring.c keyring.h
-get2gnow_SOURCES = 										\
-	about.c						about.h					\
-	best-friends.c					best-friends.h				\
-	cache.c						cache.h					\
-	debug.c						debug.h					\
-	following-viewer.c				following-viewer.h			\
-	friend-manager.c				friend-manager.h			\
-	gconfig.c					gconfig.h				\
-	geometry.c					geometry.h				\
-	groups.c					groups.h				\
-	gtkbuilder.c					gtkbuilder.h				\
-	hotkeys.c					hotkeys.h				\
-	images.c					images.h				\
-	ipc.c						ipc.h					\
-	$(keyring_sources)									\
-	main.c						main.h					\
-	main-window.c					main-window.h				\
-	network.c					network.h				\
+get2gnow_SOURCES = 													\
+	about.c						about.h								\
+	best-friends.c					best-friends.h							\
+	cache.c						cache.h								\
+	debug.c						debug.h								\
+	following-viewer.c				following-viewer.h						\
+	friend-manager.c				friend-manager.h						\
+	gconfig.c					gconfig.h							\
+	geometry.c					geometry.h							\
+	groups.c					groups.h							\
+	gtkbuilder.c					gtkbuilder.h							\
+	hotkeys.c					hotkeys.h							\
+	images.c					images.h							\
+	ipc.c						ipc.h								\
+	$(keyring_sources)												\
+	main.c						main.h								\
+	main-window.c					main-window.h							\
+	network.c					network.h							\
 	online-service.c				online-service.types.h		online-service.h		\
-	online-service-request.c			online-service-request.h		\
-	online-services.c				online-services.h			\
-	online-services-dialog.c			online-services-dialog.h		\
-	online-services-typedefs.h								\
-	online-service-wrapper.c			online-service-wrapper.h		\
-	parser.c					parser.h				\
-	preferences.c					preferences.h				\
-	program.c					program.h				\
-	proxy.c						proxy.h					\
-	searches.c					searches.h				\
-	tabs.c						tabs.h					\
-	timer.c						timer.h					\
-	uberchick-label.c				uber-chicklabel.h			\
-	uberchick-tree-view.c	uberchick-tree-view.macros.h		uberchick-tree-view.h		\
-	ui-utils.c					ui-utils.h				\
-	update-viewer.c					update-viewer.h				\
-	users-glists.c					users-glists.h				\
-	users.c				users.types.h			users.h			\
-	www.c						www.h					\
+	online-service-request.c			online-service-request.h					\
+	online-services.c				online-services.h						\
+	online-services-dialog.c			online-services-dialog.h					\
+	online-services-typedefs.h											\
+	online-service-wrapper.c			online-service-wrapper.h					\
+	parser.c					parser.h							\
+	preferences.c					preferences.h							\
+	program.c					program.h							\
+	proxy.c						proxy.h								\
+	searches.c					searches.h							\
+	tabs.c						tabs.h								\
+	timer.c						timer.h								\
+	uberchick-label.c				uberchick-label.h						\
+	uberchick-tree-view.c	uberchick-tree-view.macros.h		uberchick-tree-view.h				\
+	ui-utils.c					ui-utils.h							\
+	update-ids.c					update-ids.h							\
+	update-viewer.c					update-viewer.h							\
+	users-glists.c					users-glists.h							\
+	users.c				users.types.h			users.h						\
+	www.c						www.h								\
 
 
 @HAVE_GNOME_KEYRING_TRUE@am__objects_1 = keyring.$(OBJEXT)
@@ -121,6 +122,7 @@ get2gnow_OBJECTS =					\
 	uberchick-label.$(OBJEXT)			\
 	uberchick-tree-view.$(OBJEXT)			\
 	ui-utils.$(OBJEXT)				\
+	update-ids.$(OBJEXT)				\
 	update-viewer.$(OBJEXT)				\
 	users-glists.$(OBJEXT)				\
 	users.$(OBJEXT)					\
@@ -440,6 +442,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/uberchick-label.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/uberchick-tree-view.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ui-utils.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/update-ids.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/update-viewer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/users-glists.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/users.Po@am__quote@
