--- a/get2gnow.spec.in
+++ b/get2gnow.spec.in
@@ -4,20 +4,20 @@ Version:	@PACKAGE_VERSION@
 Release:	@PACKAGE_RELEASE@
 License:	RPL v1.3
 URL:		http://local.uberchicgeekchick.com/?projects=get2gnow
-Source0:	%{name}-%{version}.tar.gz
+Source0:	%{name}-%{version}%{release}.tar.gz
 Group:		Applications/Internet
 Packager:	Kaity G. B. <uberChick@uberChicGeekChick.Com>
 Requires:	gnome-doc-utils >= @GNOME_DOC_UTILS_VERSION_REQUIRED@
 Requires:	libsexy
 Requires:	libnotify
-Requires:	gnome-vfs2
 Requires:	libxml2 >= @LIBXML_VERSION_REQUIRED@
 Requires:	gtk2 >= @GTK_VERSION_REQUIRED@
 Requires:	gconf2 >= @GCONF_VERSION_REQUIRED@
 Requires:	gnome-keyring
 Requires:	libsexy
+BuildRequires:	gnome-doc-utils-devel >= @GNOME_DOC_UTILS_VERSION_REQUIRED@
 BuildRequires:	gnome-doc-utils >= @GNOME_DOC_UTILS_VERSION_REQUIRED@
-BuildRequires:	libgnomeui
+BuildRequires:	libgnome
 BuildRequires:	libopenssl-devel
 BuildRequires:	libsoup-devel >= @LIBSOUP_VERSION_REQUIRED@
 BuildRequires:	libxml2-devel >= @LIBXML_VERSION_REQUIRED@
@@ -26,10 +26,9 @@ BuildRequires:	libgio-2_0-0 >= @LIBGIO_VERSION_REQUIRED@
 BuildRequires:	gtk2-devel >= @GTK_VERSION_REQUIRED@
 BuildRequires:	gconf2-devel >= @GCONF_VERSION_REQUIRED@
 BuildRequires:	libnotify-devel
-BuildRequires:	gnome-vfs2-devel
 BuildRequires:	libgobject-2_0-0
 BuildRequires:	libgthread-2_0-0 >= @GTHREAD_VERSION_REQUIRED@
-BuildRequires:	libgnomeui-devel
+BuildRequires:	libgnome-devel
 BuildRequires:	gnome-keyring-devel
 
 %description
@@ -71,6 +70,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/gnome/help/get2gnow
 %{_datadir}/get2gnow/
 %{_datadir}/gconf/schemas/get2gnow.schemas
+%{_datadir}/icons/hicolor/scalable/apps/get2gnow.svg
 %{_datadir}/locale/ja/LC_MESSAGES/get2gnow.mo
 %{_datadir}/locale/sv/LC_MESSAGES/get2gnow.mo
 %{_datadir}/locale/es/LC_MESSAGES/get2gnow.mo
