--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -108,10 +108,10 @@ install-data-no: all
 install-data-yes: all
 	linguas="$(USE_LINGUAS)"; \
 	for lang in $$linguas; do \
-	  dir=$(DESTDIR)$(itlocaledir)/$$lang/LC_MESSAGES; \
-	  $(mkdir_p) $$dir; \
+	  dir="$(DESTDIR)$(itlocaledir)/$$lang/LC_MESSAGES"; \
+	  $(mkdir_p) "$$dir"; \
 	  if test -r $$lang.gmo; then \
-	    $(INSTALL_DATA) $$lang.gmo $$dir/$(GETTEXT_PACKAGE).mo; \
+	    $(INSTALL_DATA) "$$lang.gmo" "$$dir/$(GETTEXT_PACKAGE).mo"; \
 	    echo "installing $$lang.gmo as $$dir/$(GETTEXT_PACKAGE).mo"; \
 	  else \
 	    $(INSTALL_DATA) $(srcdir)/$$lang.gmo $$dir/$(GETTEXT_PACKAGE).mo; \
@@ -123,8 +123,8 @@ install-data-yes: all
 	    echo "installing $$lang.gmo.m as $$dir/$(GETTEXT_PACKAGE).mo.m"; \
 	  else \
 	    if test -r $(srcdir)/$$lang.gmo.m ; then \
-	      $(INSTALL_DATA) $(srcdir)/$$lang.gmo.m \
-		$$dir/$(GETTEXT_PACKAGE).mo.m; \
+	      $(INSTALL_DATA) "$(srcdir)/$$lang.gmo.m" \
+		"$$dir/$(GETTEXT_PACKAGE).mo.m"; \
 	      echo "installing $(srcdir)/$$lang.gmo.m as" \
 		   "$$dir/$(GETTEXT_PACKAGE).mo.m"; \
 	    else \
