--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,6 +6,7 @@
 [type: gettext/glade]data/main-window.ui
 [type: gettext/glade]data/online-services-dialog.ui
 [type: gettext/glade]data/preferences.ui
+[type: gettext/glade]data/profile-manager.ui
 [type: gettext/glade]data/request-popup-dialog.ui
 [type: gettext/glade]data/uberchick-tree-view.ui
 [type: gettext/glade]data/update-viewer.ui
@@ -45,11 +46,13 @@ src/searches.c
 src/tabs.c
 src/timer.c
 src/uberchick-label.c
+src/uberchick-sexy-entry-completion.c
 src/uberchick-tree-view.c
 src/ui-utils.c
 src/update-ids.c
 src/update-viewer.c
 src/users-glists.c
 src/users.c
+src/user-profile-viewer.c
 src/www.c
 
