010301a03: uber bug & segfaults fixed
I've finally resolved a very long standing issue that has been causing may people, including my self, to experience sporadic segfaults.  Usually these would out put a 'pthread->mutex', 'pa_thread_mutex', or etc error.  This was because get2gnow's notifications were attempting to play the default sound, just a window 'pop' sound.  But currently this causes a pulseaudio threading issue resulting in a segfault. Well: now its no longer messing with me.

I've also added support to get2gnow's notification popup's so they now display the user's avatar along with their update.

I have several other bug fixes and improvement implemented as well.  I'm doing some major refactoring to get2gnow that will vastly improve get2gnow's preformance.  But only part of this has been implemented... along with my never ending list of new features, further tests, and as always: eventual bug fixes.  Despite this being only a partial update fixing several possible segfauls, especially the pulseaudio segfault bug fix: \*w00t!\*.

Committed on : 2010-03-01 @ 03:11:53 AM

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -76,7 +76,11 @@
 			<default>5</default>
 			<locale name="C">
 				<short>Minutes between timeline retrievals</short>
-				<long>Minutes between timeline retrievals. Values supported are 5 to 100. Minutes are incremented by 5 minute interievals.</long>
+				<long>
+					Minutes between timeline retrievals.
+					Values supported are 5 to 100.
+					Minutes are incremented by 5 minute interievals.
+				</long>
 			</locale>
 		</schema>
 		
