--- a/get2gnow.spec.in
+++ b/get2gnow.spec.in
@@ -1,10 +1,9 @@
 Summary:	get2gnow's the ultimate micro-blogging client. Letting you get and do the most on all micro-blogging platforms.
 Name:		@PACKAGE_NAME@
 Version:	@PACKAGE_VERSION@
-Release:	@PACKAGE_RELEASE@
 License:	RPL v1.3
 URL:		http://local.uberchicgeekchick.com/?projects=get2gnow
-Source0:	%{name}-%{version}%{release}.tar.gz
+Source0:	%{name}-%{version}.tar.gz
 Group:		Applications/Internet
 Packager:	Kaity G. B. <uberChick@uberChicGeekChick.Com>
 Requires:	gnome-doc-utils >= @GNOME_DOC_UTILS_VERSION_REQUIRED@
