--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,11 @@ bin_PROGRAMS = get2gnow
 if HAVE_GNOME_KEYRING
 keyring_sources = keyring.c keyring.h
 endif
+if ENABLE_ALPHA_UI
+alpha_ui_sources = uberchick-label.alpha.c uberchick-label.alpha.h
+else
+alpha_ui_sources = uberchick-label.c uberchick-label.h
+endif
 
 get2gnow_SOURCES = 													\
 	about.c						about.h								\
@@ -54,7 +59,7 @@ get2gnow_SOURCES = 													\
 	searches.c					searches.h							\
 	tabs.c						tabs.h								\
 	timer.c						timer.h								\
-	uberchick-label.c				uberchick-label.h						\
+	$(alpha_ui_sources)											\
 	uberchick-sexy-entry-completion.c		uberchick-sexy-entry-completion.h				\
 	uberchick-tree-view.c		uberchick-tree-view.macros.h		uberchick-tree-view.h			\
 	ui-utils.c					ui-utils.h							\
