--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,6 +47,8 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 @HAVE_GNOME_KEYRING_TRUE@keyring_sources = keyring.c keyring.h
+@DISABLE_ALPHA_UI@alpha_ui_sources = uberchick-label.c uberchick-label.h
+@ENABLE_ALPHA_UI@alpha_ui_sources = uberchick-label.alpha.c uberchick-label.alpha.h
 get2gnow_SOURCES = 													\
 	about.c						about.h								\
 	best-friends.c					best-friends.h							\
@@ -79,7 +81,7 @@ get2gnow_SOURCES = 													\
 	searches.c					searches.h							\
 	tabs.c						tabs.h								\
 	timer.c						timer.h								\
-	uberchick-label.c				uberchick-label.h						\
+	$(alpha_ui_sources)											\
 	uberchick-sexy-entry-completion.c		uberchick-sexy-entry-completion.h				\
 	uberchick-tree-view.c		uberchick-tree-view.macros.h		uberchick-tree-view.h			\
 	ui-utils.c					ui-utils.h							\
@@ -92,6 +94,8 @@ get2gnow_SOURCES = 													\
 
 
 @HAVE_GNOME_KEYRING_TRUE@am__objects_1 = keyring.$(OBJEXT)
+@DISABLE_ALPHA_UI@alpha_ui_objects = uberchick-label.$(OBJEXT)
+@ENABLE_ALPHA_UI@alpha_ui_objects = uberchick-label.alpha.$(OBJEXT)
 get2gnow_OBJECTS =					\
 	about.$(OBJEXT)					\
 	best-friends.$(OBJEXT)				\
@@ -123,7 +127,7 @@ get2gnow_OBJECTS =					\
 	searches.$(OBJEXT)				\
 	tabs.$(OBJEXT)					\
 	timer.$(OBJEXT)					\
-	uberchick-label.$(OBJEXT)			\
+	$(alpha_ui_objects)				\
 	uberchick-sexy-entry-completion.$(OBJEXT)	\
 	uberchick-tree-view.$(OBJEXT)			\
 	ui-utils.$(OBJEXT)				\
